v2.1.1: 全局关闭 mock（生产模式） + KYC 算法服务 6 个真实对接开关
- cs-auth: oauth/github/google/wechat-oa/work/mini + sms 全部 mock=false
- cs-im: wechat oa/work mock=false
- cs-im LLM provider=openai/gpt-3.5-turbo
- 新增 KycMockProperties：6 个 KYC 算法服务 mock 开关（OCR/活体/人脸/视频/银行卡/风控）
- 6 个 KYC service 加真实 API 占位（百度/阿里云/腾讯云/银联/百融/同盾）
- 测试环境自动开 mock